[package]
name = "gdb-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
bincode = "1"
byteorder = "1"
libc = "0.2"
tui = "0.19.0"
crossterm = "0.27.0"
log = "0.4.20"